# NymphCastAudio-ESP32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions_custom.csv  release_notes.txt  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  wifi_stuff.h.template
commissioning/: release_notes_v0.1.txt  test_protocol_nca_esp32.txt
components/NPocoCore/: CMakeLists.txt  library.json
components/NPocoCore/src/: ASCIIEncoding.cpp  AbstractObserver.cpp  Ascii.cpp  AtomicCounter.cpp  BinaryReader.cpp  BinaryWriter.cpp  Bugcheck.cpp  ByteOrder.cpp  Channel.cpp  Condition.cpp  Configurable.cpp  DateTime.cpp  DateTimeFormat.cpp  DateTimeFormatter.cpp  DateTimeParser.cpp  Debugger.cpp  DirectoryIterator.cpp  Environment.cpp  ErrorHandler.cpp  Event.cpp  FPEnvironment.cpp  File.cpp  Format.cpp  Formatter.cpp  Latin1Encoding.cpp  Latin2Encoding.cpp  Latin9Encoding.cpp  LocalDateTime.cpp  LogStream.cpp  Logger.cpp  LoggingRegistry.cpp  MemoryStream.cpp  Message.cpp  Mutex.cpp  NPString.cpp  NamedEvent.cpp  Notification.cpp  NotificationCenter.cpp  NotificationQueue.cpp  NumberFormatter.cpp  (+29 more)
components/NPocoNet/: CMakeLists.txt  component.mk  library.json
components/NPocoNet/src/: DNS.cpp  DatagramSocket.cpp  DatagramSocketImpl.cpp  HostEntry.cpp  IPAddress.cpp  IPAddressImpl.cpp  Net.cpp  NetworkInterface.cpp  ServerSocket.cpp  ServerSocketImpl.cpp  Socket.cpp  SocketAddress.cpp  SocketAddressImpl.cpp  SocketImpl.cpp  StreamSocket.cpp  StreamSocketImpl.cpp  TCPServer.cpp  TCPServerConnection.cpp  TCPServerConnectionFactory.cpp  TCPServerDispatcher.cpp  TCPServerParams.cpp
components/NyanSD/: CMakeLists.txt  nyansd.cpp  nyansd.h
components/NymphRPC/: CMakeLists.txt  nymph_listener.cpp  nymph_server.cpp  nymph_server.h  nymph_session.cpp  nymph_socket_listener.cpp  remote_client.cpp
components/libavcodec/: CMakeLists.txt  component.mk  library.json
components/libavcodec/libavcodec/: aac_ac3_parser.c  aacdec.c  aacdec_template.c  aacps_common.c  aacps_tables.h  aacsbr.c  aacsbr_fixed.c  aacsbrdata.h  aactab.c  ac3dec.c  atrac3.c  atrac9dec.c  avcodec.c  avcodec.h  cbrt_tables.h  clearvideo.c  codec_list.c  codec_par.c  config.h  config_components.h  cos_tables.c  dct.h  dsd.c  dsd.h  dsddec.c  get_buffer.c  jrevdct.c  mpc7.c  mpc8.c  mss4.c  (+19 more)
components/libavdevice/: CMakeLists.txt  component.mk  library.json
components/libavfilter/: CMakeLists.txt  component.mk  library.json
components/libavfilter/libavfilter/: aeval.c  af_adeclick.c  af_adynamicequalizer.c  avfilter.c  filter_list.c  setpts.c
components/libavformat/: CMakeLists.txt  component.mk  library.json
components/libavutil/: CMakeLists.txt  component.mk  library.json
components/libswresample/: CMakeLists.txt  component.mk  library.json
components/libswresample/libswresample/: rematrix.c  swresample_frame.c
components/libswscale/: CMakeLists.txt  component.mk  library.json
main/: CMakeLists.txt  databuffer.cpp  main.cpp
main/ffplay/: audio_renderer.cpp  audio_renderer.h  clock.cpp  config.h  decoder.cpp  decoder.h  ffplay.cpp  ffplay.h  frame_queue.cpp  packet_queue.cpp  player.cpp  player.h  sdl_renderer.cpp  sdl_renderer.h  stream_handler.cpp  stream_handler.h  subtitle_handler.cpp  subtitle_handler.h  types.h  video_renderer.cpp  video_renderer.h
(+207 files in other folders)
